configure services